# snippets

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
migrations/: 000_create_snippets.sql
src/: database.rs  main.rs
